--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
                 <button title="Copy to Clipboard" class="copy-clipboard"></button>
             </div>
             <div class="card-body">
-                <textarea id="text-right" spellcheck="false" class="card-content" rows="10" cols="30"></textarea>
+                <textarea id="text-right" spellcheck="false" class="card-content" rows="10" cols="30" disabled></textarea>
             </div>
         </div>
     </section>
