--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
                             <option class="option" value="row">✅ transRow</option>
                             <!-- Substitution -->
                             <option class="option" value="mono">✅ mono</option>
-                            <option class="option" value="vigenere">✅ poli</option>
+                            <option class="option" value="vigenere">✅ vigenere</option>
                         </select>
                     </div>
                     <div class="container center p-bottom">
