--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
             <!-- STUDENTS LIST 😊 📋 -->
         </ul>
     </footer>
-    <a href="https://github.com/cartory/enCoderr-web.git" class="github-corner" aria-label="View source on GitHub"
+    <a href="https://github.com/cartory/enCoderr-web" class="github-corner" aria-label="View source on GitHub"
         title="View source on GitHub" target="_blank">
         <svg width="80" height="80" viewBox="0 0 250 250" style="position: absolute; top: 0px; right: 0px; border: 0px;"
             aria-hidden="true">
